// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataCollectorsCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    insights-client
                  </span>
                </dt>
                <dd
                  aria-label="insights-client value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="insights-client value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    subscription-manager
                  </span>
                </dt>
                <dd
                  aria-label="subscription-manager value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="subscription-manager value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Satellite
                  </span>
                </dt>
                <dd
                  aria-label="Satellite value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Satellite value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Discovery
                  </span>
                </dt>
                <dd
                  aria-label="Discovery value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Discovery value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-2"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    insights-client
                  </span>
                </dt>
                <dd
                  aria-label="insights-client value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="insights-client value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-1"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-2"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status:
                        <span
                          class="pf-v6-c-icon"
                          style="margin-left: 4px; margin-right: 4px;"
                        >
                          <span
                            class="pf-v6-c-icon__content pf-m-success"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                              />
                            </svg>
                          </span>
                        </span>
                        Active
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-3"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Insights Client ID: 
                        <div
                          class="pf-v6-c-clipboard-copy pf-m-inline"
                          data-ouia-component-type="PF6/ClipboardCopy"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-v6-c-clipboard-copy__text"
                            id="text-input-2"
                          >
                            1234
                          </span>
                          <span
                            class="pf-v6-c-clipboard-copy__actions"
                          >
                            <span
                              class="pf-v6-c-clipboard-copy__actions-item"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                                data-ouia-component-type="PF6/Button"
                                data-ouia-safe="true"
                                id="copy-button-2"
                                type="button"
                              >
                                <span
                                  class="pf-v6-c-button__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v6-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 448 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-4"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: 13 May 2022 07:42 UTC
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    subscription-manager
                  </span>
                </dt>
                <dd
                  aria-label="subscription-manager value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="subscription-manager value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-5"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-6"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-7"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Satellite
                  </span>
                </dt>
                <dd
                  aria-label="Satellite value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Satellite value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-8"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-9"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-10"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Discovery
                  </span>
                </dt>
                <dd
                  aria-label="Discovery value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Discovery value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-11"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-12"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-13"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render custom collectors 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-10"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    collector name
                  </span>
                </dt>
                <dd
                  aria-label="collector name value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="collector name value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-53"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-54"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status:
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-55"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        reporter id: 
                        <div
                          class="pf-v6-c-clipboard-copy pf-m-inline"
                          data-ouia-component-type="PF6/ClipboardCopy"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-v6-c-clipboard-copy__text"
                            id="text-input-10"
                          >
                            1234567
                          </span>
                          <span
                            class="pf-v6-c-clipboard-copy__actions"
                          >
                            <span
                              class="pf-v6-c-clipboard-copy__actions-item"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                                data-ouia-component-id="OUIA-Generated-Button-plain-11"
                                data-ouia-component-type="PF6/Button"
                                data-ouia-safe="true"
                                id="copy-button-10"
                                type="button"
                              >
                                <span
                                  class="pf-v6-c-button__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v6-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 448 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-56"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: 01 Jan 2260 00:00 UTC
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
